# shishiodoshi-xylophone

arduino/shishiodoshi_controller/: shishiodoshi_controller.ino
docs/: spec.md
script/: .gitignore  README.md  config.json  pyproject.toml
script/src/shishiodoshi_client/: __init__.py  __main__.py  app.py  config.py  core.py
script/tests/: test_app.py  test_config.py  test_core.py
