[project]
name = "shishiodoshi-client"
version = "0.1.0"
description = "MIDI to Arduino serial bridge for the shishiodoshi xylophone"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mido>=1.3,<2",
    "python-rtmidi>=1.5,<2",
    "pyserial>=3.5,<4",
]

[project.scripts]
shishiodoshi-client = "shishiodoshi_client.app:main"

[dependency-groups]
dev = [
    "pytest>=8,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shishiodoshi_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
